<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_events"
        android:title="@string/events"/>
    <item
        android:id="@+id/navigation_teams"
        android:title="@string/teams"/>
    <item
        android:id="@+id/navigation_favorite"
        android:title="@string/favorites"/>
</menu>