<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/ic_search"
        android:title="@android:string/search_go"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchMenu1"
        android:icon="@drawable/ic_search"
        android:title="@android:string/search_go"
        app:showAsAction="ifRoom" />

</menu>